<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="biz.eventually.atpl.ui.about.AboutActivity"
	android:background="@color/colorPrimaryDark"
>

	<ImageView
		android:id="@+id/about_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:srcCompat="@drawable/atr_yellow"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginTop="64dp"
		android:contentDescription="Aeroknow logo" />

	<TextView
		android:id="@+id/about_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/colorSecondary"
		app:layout_constraintTop_toBottomOf="@+id/about_logo"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		tools:text="@string/app_name" android:textSize="30sp" />

	<TextView
		android:id="@+id/about_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="@style/TextAppearance.AppCompat.Small"
		android:textColor="@color/colorAccent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		tools:text="v1.0.0"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/about_by"
	/>
	<TextView
		android:text="@string/developed_by"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/developpers"
		app:layout_constraintStart_toStartOf="parent"
		android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
		android:layout_marginTop="1000dp" app:layout_constraintTop_toBottomOf="@+id/about_version" />
	<TextView
		android:text="@string/developers"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/textView" android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
		app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
		android:textColor="@color/colorGrey" />
	<TextView
		android:id="@+id/about_dev_by"
		android:text="@string/developed_by"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		app:layout_constraintBottom_toTopOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
		android:textColor="@color/colorGreyLight" android:textSize="30sp" />

	<TextView
		android:id="@+id/about_by"
		android:text="@string/about_by"
		android:textColor="@color/colorGreyLight"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="4dp"
		android:layout_marginEnd="4dp"
		app:layout_constraintRight_toLeftOf="@+id/about_company"
		app:layout_constraintTop_toTopOf="@+id/about_company"
		app:layout_constraintBottom_toBottomOf="@+id/about_company"
		android:textSize="30sp"
	/>

	<TextView
		android:id="@+id/about_company"
		android:text="@string/by_company"
		android:textColor="@color/colorGreyLight"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintTop_toBottomOf="@+id/about_name"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginStart="8dp"
		android:layout_marginEnd="8dp"
		android:textSize="18sp"
	/>
	<ImageView
		android:id="@+id/about_home"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		app:srcCompat="@drawable/ic_keyboard_backspace_white_24dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		android:layout_marginStart="16dp"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
	/>

</android.support.constraint.ConstraintLayout>