<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
											 xmlns:tools="http://schemas.android.com/tools"
											 xmlns:app="http://schemas.android.com/apk/res-auto"
											 android:id="@+id/source_container"
											 android:layout_width="match_parent"
											 android:layout_height="match_parent"
											 tools:context="biz.eventually.atpl.ui.source.SourceActivity">

	<View
		android:id="@+id/main_background"
		android:layout_width="0dp"
		android:layout_height="150dp"
		android:background="@color/colorPrimaryDark"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintHorizontal_bias="0.0" />

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="16dp"
		android:layout_marginEnd="16dp"
		android:text="@string/app_name"
		android:textAppearance="@style/TextAppearance.AppCompat.Large"
		android:textColor="@color/colorSecondary"
		app:layout_constraintBottom_toTopOf="@+id/app_version"
		app:layout_constraintRight_toRightOf="@+id/main_background"
		tools:text="Aero Know" />

	<TextView
		android:id="@+id/app_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="8dp"
		android:layout_marginRight="16dp"
		android:layout_marginEnd="16dp"
		android:textAppearance="@style/TextAppearance.AppCompat.Small"
		android:textColor="@color/colorAccent"
		app:layout_constraintBottom_toBottomOf="@+id/main_background"
		app:layout_constraintRight_toRightOf="@+id/main_background"
		tools:text="v1.0.0"
	/>

	<RelativeLayout
		android:layout_width="0dp"
		android:layout_height="150dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
	>

		<ImageView
			android:id="@+id/atr_blueprint"
			android:layout_width="440dp"
			android:layout_height="220dp"
			android:layout_alignParentTop="true"
			android:layout_marginLeft="-150dp"
			android:layout_marginStart="-150dp"
			app:srcCompat="@drawable/ic_atr" />
	</RelativeLayout>

	<TextView
		android:id="@+id/source_welcome"
		android:text="@string/welcome"
		android:textSize="54sp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="24dp"
		android:layout_marginLeft="16dp"
		android:layout_marginStart="16dp"
		app:layout_constraintTop_toBottomOf="@+id/main_background"
		app:layout_constraintLeft_toLeftOf="parent"

	/>

	<TextView
		android:id="@+id/source_welcome_message"
		android:text="@string/welcome_message"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		app:layout_constraintTop_toBottomOf="@+id/source_welcome"
		app:layout_constraintLeft_toLeftOf="@+id/source_welcome"
		app:layout_constraintEnd_toEndOf="parent"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
	/>

	<ListView
		android:id="@+id/source_listview"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		app:layout_constraintTop_toBottomOf="@+id/source_welcome_message"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:dividerHeight="0dp"
		android:divider="@null"
	/>

	<com.victor.loading.rotate.RotateLoading
		android:id="@+id/rotateloading"
		android:layout_width="80dp"
		android:layout_height="80dp"
		app:loading_width="5dp"
		app:loading_color="@color/colorAccent"
		android:layout_centerInParent="true"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
	/>

	<TextView
		android:id="@+id/source_error"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/error_offline_no_data"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.AppCompat.Medium"
		android:textColor="@color/colorGrey"
		app:layout_constraintBottom_toTopOf="@+id/source_refresh"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:layout_marginBottom="16dp"
		android:visibility="gone"
		/>

	<Button
		android:id="@+id/source_refresh"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/try_again"
		android:background="@drawable/question_button"
		app:layout_constraintTop_toBottomOf="@+id/main_background"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		android:paddingLeft="16dp"
		android:paddingStart="16dp"
		android:paddingRight="16dp"
		android:paddingEnd="16dp"
		android:visibility="gone"
	/>

	<ImageView
		android:id="@+id/source_about"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_menu_white_24dp" />

	<include layout="@layout/guillotine" android:visibility="visible" />

</android.support.constraint.ConstraintLayout>
